--- a/index.html
+++ b/index.html
@@ -13,33 +13,70 @@
 <body>
     <div class="container">
         <header class="header">
-            <div class="logo">
-                <i class="fas fa-leaf"></i>
-                <h1>茶言觀色·客戶流失風險評估器</h1>
+            <div class="header-top">
+                <div class="logo">
+                    <i class="fas fa-leaf"></i>
+                    <h1 data-i18n="appTitle">茶言觀色·客戶流失風險評估器</h1>
+                </div>
+                <div class="language-selector">
+                    <div class="language-dropdown">
+                        <button class="language-btn" id="language-btn">
+                            <i class="fas fa-globe"></i>
+                            <span id="current-language">中文</span>
+                            <i class="fas fa-chevron-down"></i>
+                        </button>
+                        <div class="language-dropdown-content" id="language-dropdown">
+                            <div class="language-option" data-lang="auto">
+                                <i class="fas fa-map-marker-alt"></i>
+                                <span>自動檢測</span>
+                            </div>
+                            <div class="language-option" data-lang="en">
+                                <span class="language-flag">🇺🇸</span>
+                                <span>English</span>
+                            </div>
+                            <div class="language-option" data-lang="zh">
+                                <span class="language-flag">🇨🇳</span>
+                                <span>中文</span>
+                            </div>
+                            <div class="language-option" data-lang="ar">
+                                <span class="language-flag">🇸🇦</span>
+                                <span>العربية</span>
+                            </div>
+                            <div class="language-option" data-lang="fr">
+                                <span class="language-flag">🇫🇷</span>
+                                <span>Français</span>
+                            </div>
+                            <div class="language-option" data-lang="ru">
+                                <span class="language-flag">🇷🇺</span>
+                                <span>Русский</span>
+                            </div>
+                            <div class="language-option" data-lang="es">
+                                <span class="language-flag">🇪🇸</span>
+                                <span>Español</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <p class="subtitle">Tea Observation Customer Churn Risk Assessor</p>
-            <p class="description">幫助茶飲店管理層快速評估客戶流失風險，提供數據驅動的留客建議</p>
+            <p class="subtitle" data-i18n="appSubtitle">Tea Observation Customer Churn Risk Assessor</p>
+            <p class="description" data-i18n="appDescription">幫助茶飲店管理層快速評估客戶流失風險，提供數據驅動的留客建議</p>
         </header>
 
         <main class="main-content">
             <div class="assessment-container">
                 <section class="input-section">
-                    <h2><i class="fas fa-edit"></i> 客戶資料輸入</h2>
-                    <p class="section-description">請輸入客戶的四個關鍵指標進行風險評估</p>
+                    <h2><i class="fas fa-edit"></i> <span data-i18n="inputSectionTitle">客戶資料輸入</span></h2>
+                    <p class="section-description" data-i18n="inputSectionDescription">請輸入客戶的四個關鍵指標進行風險評估</p>
                     
                     <form id="risk-assessment-form">
                         <div class="form-grid">
                             <div class="form-group">
                                 <label for="age">
-                                    <i class="fas fa-user"></i> 年齡 (Age)
-                                    <span class="tooltip">
-                                        <i class="fas fa-info-circle"></i>
-                                        <span class="tooltip-text">範圍：18-80歲</span>
-                                    </span>
+                                    <i class="fas fa-user"></i> <span data-i18n="ageLabel">年齡</span>
                                 </label>
                                 <div class="input-with-unit">
                                     <input type="number" id="age" name="age" min="18" max="80" value="30" required>
-                                    <span class="unit">歲</span>
+                                    <span class="unit" data-i18n="ageUnit">歲</span>
                                 </div>
                                 <div class="range-slider">
                                     <input type="range" id="age-slider" min="18" max="80" value="30" class="slider">
@@ -48,15 +85,11 @@
 
                             <div class="form-group">
                                 <label for="monthly-visits">
-                                    <i class="fas fa-calendar-alt"></i> 每月到訪次數 (Monthly Visits)
-                                    <span class="tooltip">
-                                        <i class="fas fa-info-circle"></i>
-                                        <span class="tooltip-text">範圍：0-30次/月</span>
-                                    </span>
+                                    <i class="fas fa-calendar-alt"></i> <span data-i18n="monthlyVisitsLabel">每月到訪次數</span>
                                 </label>
                                 <div class="input-with-unit">
                                     <input type="number" id="monthly-visits" name="monthly-visits" min="0" max="30" value="5" required>
-                                    <span class="unit">次/月</span>
+                                    <span class="unit" data-i18n="monthlyVisitsUnit">次/月</span>
                                 </div>
                                 <div class="range-slider">
                                     <input type="range" id="visits-slider" min="0" max="30" value="5" class="slider">
@@ -65,15 +98,11 @@
 
                             <div class="form-group">
                                 <label for="days-since-last-visit">
-                                    <i class="fas fa-clock"></i> 最近一次到訪天數 (Days Since Last Visit)
-                                    <span class="tooltip">
-                                        <i class="fas fa-info-circle"></i>
-                                        <span class="tooltip-text">範圍：0-365天</span>
-                                    </span>
+                                    <i class="fas fa-clock"></i> <span data-i18n="daysSinceLastVisitLabel">最近一次到訪天數</span>
                                 </label>
                                 <div class="input-with-unit">
                                     <input type="number" id="days-since-last-visit" name="days-since-last-visit" min="0" max="365" value="15" required>
-                                    <span class="unit">天</span>
+                                    <span class="unit" data-i18n="daysSinceLastVisitUnit">天</span>
                                 </div>
                                 <div class="range-slider">
                                     <input type="range" id="days-slider" min="0" max="365" value="15" class="slider">
@@ -82,11 +111,7 @@
 
                             <div class="form-group">
                                 <label for="satisfaction-score">
-                                    <i class="fas fa-star"></i> 滿意度評分 (Satisfaction Score)
-                                    <span class="tooltip">
-                                        <i class="fas fa-info-circle"></i>
-                                        <span class="tooltip-text">5分制：1=非常不滿意，5=非常滿意</span>
-                                    </span>
+                                    <i class="fas fa-star"></i> <span data-i18n="satisfactionScoreLabel">滿意度評分</span>
                                 </label>
                                 <div class="satisfaction-stars">
                                     <div class="stars-container">
@@ -97,8 +122,8 @@
                                         <div class="star active" data-value="5">5</div>
                                     </div>
                                     <div class="score-labels">
-                                        <span>非常不滿意</span>
-                                        <span>非常滿意</span>
+                                        <span data-i18n="veryDissatisfied">非常不滿意</span>
+                                        <span data-i18n="verySatisfied">非常滿意</span>
                                     </div>
                                 </div>
                                 <input type="hidden" id="satisfaction-score" name="satisfaction-score" value="5">
@@ -107,28 +132,28 @@
 
                         <div class="form-actions">
                             <button type="submit" class="btn btn-primary">
-                                <i class="fas fa-chart-line"></i> 評估風險
+                                <i class="fas fa-chart-line"></i> <span data-i18n="assessRiskBtn">評估風險</span>
                             </button>
                             <button type="button" id="reset-btn" class="btn btn-secondary">
-                                <i class="fas fa-redo"></i> 重設
+                                <i class="fas fa-redo"></i> <span data-i18n="resetBtn">重設</span>
                             </button>
                         </div>
                     </form>
                 </section>
 
                 <section class="result-section" id="result-section">
-                    <h2><i class="fas fa-chart-pie"></i> 風險評估結果</h2>
-                    <p class="section-description">根據輸入資料計算的客戶流失風險分析</p>
+                    <h2><i class="fas fa-chart-pie"></i> <span data-i18n="resultSectionTitle">風險評估結果</span></h2>
+                    <p class="section-description" data-i18n="resultSectionDescription">根據輸入資料計算的客戶流失風險分析</p>
                     
                     <div class="result-cards">
                         <div class="result-card risk-level-card">
                             <div class="card-header">
-                                <h3><i class="fas fa-exclamation-triangle"></i> 風險等級</h3>
+                                <h3><i class="fas fa-exclamation-triangle"></i> <span data-i18n="riskLevelTitle">風險等級</span></h3>
                             </div>
                             <div class="card-content">
                                 <div class="risk-indicator" id="risk-indicator">
                                     <div class="risk-dot low-risk"></div>
-                                    <span class="risk-text">低風險</span>
+                                    <span class="risk-text" id="risk-text" data-i18n="lowRisk">低風險</span>
                                 </div>
                                 <div class="risk-description" id="risk-description">
                                     客戶忠誠度高，流失可能性低
@@ -138,7 +163,7 @@
 
                         <div class="result-card probability-card">
                             <div class="card-header">
-                                <h3><i class="fas fa-percentage"></i> 流失機率</h3>
+                                <h3><i class="fas fa-percentage"></i> <span data-i18n="churnProbabilityTitle">流失機率</span></h3>
                             </div>
                             <div class="card-content">
                                 <div class="probability-display">
@@ -160,7 +185,7 @@
 
                         <div class="result-card recommendations-card">
                             <div class="card-header">
-                                <h3><i class="fas fa-lightbulb"></i> 行動建議</h3>
+                                <h3><i class="fas fa-lightbulb"></i> <span data-i18n="actionRecommendationsTitle">行動建議</span></h3>
                             </div>
                             <div class="card-content">
                                 <ul class="recommendations-list" id="recommendations-list">
@@ -174,39 +199,39 @@
                     </div>
 
                     <div class="risk-factors">
-                        <h3><i class="fas fa-chart-bar"></i> 風險因素分析</h3>
+                        <h3><i class="fas fa-chart-bar"></i> <span data-i18n="riskFactorsTitle">風險因素分析</span></h3>
                         <div class="factors-grid">
                             <div class="factor">
-                                <div class="factor-label">最近到訪天數</div>
+                                <div class="factor-label" data-i18n="daysSinceLastVisitFactor">最近到訪天數</div>
                                 <div class="factor-bar">
                                     <div class="factor-fill low-risk" style="width: 20%"></div>
                                 </div>
                                 <div class="factor-value">15天</div>
-                                <div class="factor-impact">影響程度：45%</div>
+                                <div class="factor-impact" data-i18n="impactLevel">影響程度：45%</div>
                             </div>
                             <div class="factor">
-                                <div class="factor-label">滿意度評分</div>
+                                <div class="factor-label" data-i18n="satisfactionScoreFactor">滿意度評分</div>
                                 <div class="factor-bar">
                                     <div class="factor-fill low-risk" style="width: 10%"></div>
                                 </div>
                                 <div class="factor-value">5分</div>
-                                <div class="factor-impact">影響程度：30%</div>
+                                <div class="factor-impact" data-i18n="impactLevel">影響程度：30%</div>
                             </div>
                             <div class="factor">
-                                <div class="factor-label">每月到訪次數</div>
+                                <div class="factor-label" data-i18n="monthlyVisitsFactor">每月到訪次數</div>
                                 <div class="factor-bar">
                                     <div class="factor-fill low-risk" style="width: 30%"></div>
                                 </div>
                                 <div class="factor-value">5次</div>
-                                <div class="factor-impact">影響程度：15%</div>
+                                <div class="factor-impact" data-i18n="impactLevel">影響程度：15%</div>
                             </div>
                             <div class="factor">
-                                <div class="factor-label">年齡</div>
+                                <div class="factor-label" data-i18n="ageFactor">年齡</div>
                                 <div class="factor-bar">
                                     <div class="factor-fill low-risk" style="width: 40%"></div>
                                 </div>
                                 <div class="factor-value">30歲</div>
-                                <div class="factor-impact">影響程度：10%</div>
+                                <div class="factor-impact" data-i18n="impactLevel">影響程度：10%</div>
                             </div>
                         </div>
                     </div>
@@ -215,10 +240,10 @@
 
             <section class="info-section">
                 <div class="info-card">
-                    <h3><i class="fas fa-info-circle"></i> 評估規則說明</h3>
+                    <h3><i class="fas fa-info-circle"></i> <span data-i18n="rulesTitle">評估規則說明</span></h3>
                     <div class="rules-grid">
                         <div class="rule-card low-risk-rule">
-                            <h4>低風險條件</h4>
+                            <h4 data-i18n="lowRiskRulesTitle">低風險條件</h4>
                             <ul>
                                 <li>最近到訪天數 < 30天</li>
                                 <li>滿意度 ≥ 4分</li>
@@ -227,7 +252,7 @@
                             <p class="rule-probability">流失機率：~15%</p>
                         </div>
                         <div class="rule-card medium-risk-rule">
-                            <h4>中風險條件</h4>
+                            <h4 data-i18n="mediumRiskRulesTitle">中風險條件</h4>
                             <ul>
                                 <li>最近到訪天數 30-60天</li>
                                 <li>滿意度 = 3分</li>
@@ -236,7 +261,7 @@
                             <p class="rule-probability">流失機率：~28.5%</p>
                         </div>
                         <div class="rule-card high-risk-rule">
-                            <h4>高風險條件</h4>
+                            <h4 data-i18n="highRiskRulesTitle">高風險條件</h4>
                             <ul>
                                 <li>最近到訪天數 > 60天</li>
                                 <li>滿意度 ≤ 2分</li>
@@ -250,11 +275,16 @@
         </main>
 
         <footer class="footer">
-            <p>茶言觀色·客戶流失風險評估器 v1.0 • 基於2026年2月數據分析</p>
-            <p class="footer-note">本工具僅供參考，實際決策請結合業務經驗與市場狀況</p>
+            <p data-i18n="footerText">茶言觀色·客戶流失風險評估器 v1.0 • 基於2026年2月數據分析</p>
+            <p class="footer-note" data-i18n="footerNote">本工具僅供參考，實際決策請結合業務經驗與市場狀況</p>
         </footer>
     </div>
 
+    <!-- 載入翻譯文件 -->
+    <script src="translations.js"></script>
+    <!-- 載入語言管理器 -->
+    <script src="language-manager.js"></script>
+    <!-- 載入主應用程式邏輯 -->
     <script src="script.js"></script>
 </body>
 </html>
