--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@
                                 <span class="language-flag">🇪🇸</span>
                                 <span data-i18n="language.spanish">Español</span>
                             </div>
+                            <div class="language-option" data-lang="ja">
+                                <span class="language-flag">🇯🇵</span>
+                                <span data-i18n="language.japanese">日本語</span>
+                            </div>
+                            <div class="language-option" data-lang="fa">
+                                <span class="language-flag">🇮🇷</span>
+                                <span data-i18n="language.persian">فارسی</span>
+                            </div>
                         </div>
                     </div>
                 </div>
